udotool (1.6) UNRELEASED; urgency=medium

  * NEW: Wait for settle time after device setup.
  * NEW: Option `--settle-time` to specify device settle time.
  * NEW: Use environment variables to override some defaults.
  * NEW: Environment variables `UDOTOOL_LOOP_COUNT` and `UDOTOOL_LOOP_RTIME` are set in a loop.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 13 Oct 2024 23:41:37 +0300

udotool (1.5) unstable; urgency=medium

  * NEW: Can now specify tweaks in addition to quirks.
  * NEW: New tweak `NOMMAN` for memory-constrained systems.
  * NEW: Command `exit`.
  * CHANGE: Command `endloop` renamed to `end`.
  * NEW: Command `if`/`else`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 13 Oct 2024 18:28:44 +0300

udotool (1.4) unstable; urgency=medium

  * CHANGED: script lines are now subject to word expansion.
  * NEW: Argument for option `-i` is now optional.
  * NEW: Command `echo`.
  * NEW: Command `set`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Tue, 08 Oct 2024 14:59:22 +0300

udotool (1.3) unstable; urgency=medium

  * NEW: Option for `exec` to run command detached.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 03 Aug 2024 17:22:40 +0300

udotool (1.2) unstable; urgency=medium

  * NEW: Timed loops and timed repeats.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Wed, 31 Jul 2024 20:17:46 +0300

udotool (1.1) unstable; urgency=medium

  * [INCOMPATIBLE CHANGE] Absolute positions are now in percents.
  * [INCOMPATIBLE CHANGE] Wheel positions are now in notches and fractions
    of a notch.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sat, 27 Jul 2024 18:47:07 +0300

udotool (1.0) unstable; urgency=medium

  * Initial release.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Fri, 26 Jul 2024 21:15:59 +0300